# schemaspec

./: .gitignore  README.md  pyproject.toml
docs/api/0.0.1/: index.html  schemaspec.html  search.js
docs/api/0.0.1/schemaspec/: __version__.html  schema.html
docs/api/0.0.2/: search.js
docs/api/0.0.2/schemaspec/: __version__.html  adapters.html  metafields.html  schema.html
schemaspec/: __init__.py  adapters.py  metafields.py  namespace.py  schema.py  schema_table.py  schema_value.py
scripts/: make_docs.py
templates/: custom.css  module.html.jinja2
tests/: manual.py  test_metafields.py
