[project]
name = "schemaspec"
description = "Transparent config schema spec builder."
authors = [
    {name = "John-Tuesday", email = "10697715+John-Tuesday@users.noreply.github.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
]
dynamic = ["version"]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = { source="file", path="schemaspec/__version__.py" }

[tool.pdm.scripts.manual-test]
cmd = "python -m tests.manual"
